--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Aluraflix</title>
+    <title>zaqueuflix</title>
 </head>
 
 <body>
 
-    <header>ALURAFLIX</header>
+    <header>zaqueuflix</header>
     <section class="camada">
         <div class="chamada-texto">
             <h1>BRINO E MAUMAU PASSARAM 24 HORAS NA CIDADE FANTASMA! (ESPECIAL DE HALLOWEEN)</h1>
